# langchain-video

./: .gitignore  LICENSE  README.md  pyproject.toml
langchain-video/core/blobs/: __init__.py  audio_blob.py  image_blob.py  video_blob.py
langchain_video/: __init__.py
langchain_video/core/: __init__.py
langchain_video/core/blobs/: __init__.py  audio_blob.py  base.py  image_blob.py  video_blob.py
langchain_video/core/embeddings/: __init__.py  base.py  embeddings.py  huggingface.py
langchain_video/core/loaders/: __init__.py  audio_blob_loader.py  base.py  image_blob_loader.py  video_blob_loader.py
langchain_video/core/resamplers/: __init__.py  anchor_frame_resampler.py  base.py  first_frame_resampler.py  fixed_resampler.py  random_resampler.py  uniform_resampler.py
langchain_video/core/spliters/: __init__.py  audio_blob_spliter.py  base.py  video_blob_spliter.py
langchain_video/core/splters/: video_blob_spliter.py
langchain_video/core/vector_stores/: __init__.py  base.py  multi_modal_faiss.py  multi_modal_vector_store.py
langchain_video/embeddings/: __init__.py
langchain_video/embeddings/imagebind/: README.md  __init__.py  imagebind.py  requirements.txt
langchain_video/embeddings/imagebind/source/: __init__.py  data.py
langchain_video/embeddings/imagebind/source/models/: imagebind_model.py  multimodal_preprocessors.py
