[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain_video"
version = "0.1.0"
description = "Langchain third-party package for multimodal data and video data"
authors = [
    { name = "eumgill98", email = "wjdghccks02@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "einops==0.8.1",
    "ftfy==6.3.1",
    "iopath==0.1.10",
    "langchain==0.3.27",
    "langchain-core==0.3.74",
    "langchain-community",
    "faiss-cpu",
    "numpy>=2,<2.3.0",
    "opencv-python==4.12.0.88",
    "pillow==11.3.0",
    "pydantic==2.11.7",
    "ffmpeg-python",
    "regex==2025.7.34",
    "soundfile==0.13.1",
    "timm==1.0.19",
    "torch==2.8.0",
    "torchaudio==2.8.0",
    "torchvision==0.23.0",
    "tqdm==4.67.1",
    "pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@6cdc929315aab1b5674b6dcf73b16ec99147735f"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort"
]

[project.urls]
Homepage = "https://github.com/Eumgill98/langchain-video"

[tool.setuptools.packages.find]
where = ["."]
include = ["langchain_video*"]

[tool.setuptools.package-data]
"langchain_video.embeddings.imagebind" = ["source/bpe/*.txt.gz"]
